# spcli-ui

./: README.md  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: install_spcli.yml
spcli-ui/: menu.py  spcli-gui.py
spcli_ui/: cli_ui.py  menu.py  sp_api.py  spui.py
